--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework = "^3.14.0"
 markdown = "^3.5.1"
 django-filter = "^23.5"
 gunicorn = "^21.2.0"
+djangorestframework-simplejwt = "^5.3.1"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.1.0"
